[workspace]
members = [
    "crates/blitz_web_api",
    "crates/leptos-blitz",
    "crates/leptos_blitz_macro",
]
resolver = "2"

[workspace.dependencies]
leptos_blitz_macro = { path = "./crates/leptos_blitz_macro" }
leptos_hot_reload = "0.7.1"

blitz_web_api = { path = "./crates/blitz_web_api" }

# Blitz
blitz-shell = { git = "https://github.com/DioxusLabs/blitz", rev = "6d3733d" }
blitz-net = { git = "https://github.com/DioxusLabs/blitz", rev = "6d3733d" }
blitz-dom = { git = "https://github.com/DioxusLabs/blitz", rev = "6d3733d" }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "6d3733d" }
blitz-html = { git = "https://github.com/DioxusLabs/blitz", rev = "6d3733d" }
blitz-renderer-vello = { git = "https://github.com/DioxusLabs/blitz", rev = "6d3733d" }

[package]
name = "leptos-blitz-examples"
version = "0.0.1"
edition = "2021"
publish = false

[dev-dependencies]
leptos_blitz = { path = "./crates/leptos-blitz"}
