[package]
name = "leptos_blitz_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
attribute-derive = { version = "0.9", features = ["syn-full"]}
cfg-if = "1"
html-escape = "0.2"
itertools = "0.12"
prettyplease = "0.2.4"
proc-macro-error = { version = "1", default-features = false }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
rstml = "0.11.2"
leptos_hot_reload = { workspace = true }
# server_fn_macro = { workspace = true }
convert_case = "0.6.0"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1.37"

[features]
csr = []
hydrate = []
# ssr = ["server_fn_macro/ssr"]
# nightly = ["server_fn_macro/nightly"]
tracing = []
experimental-islands = []
trace-component-props = []
# actix = ["server_fn_macro/actix"]
# axum = ["server_fn_macro/axum"]
