[package]
name = "leptos-blitz"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"

# Leptos
# leptos = { version = "0.7.0", features = ["csr"] }
leptos_blitz_macro = { workspace = true }
any_spawner = { version = "0.2.0", features = ["tokio"] }
next_tuple = "0.1.0"
paste = "1.0"
futures = "0.3.31"
parking_lot = "0.12.3"
html-escape = "0.2.13"
reactive_graph = { version = "0.1.0", features = ["serde"] }
const_str_slice_concat = "0.1.0"
slotmap = "1.0.7"
send_wrapper = "0.6.0"

# Blitz
blitz-shell = { git = "https://github.com/DioxusLabs/blitz", rev = "280b1ba" }
blitz-net = { git = "https://github.com/DioxusLabs/blitz", rev = "280b1ba" }
blitz-dom = { git = "https://github.com/DioxusLabs/blitz", rev = "280b1ba" }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "280b1ba" }
blitz-html = { git = "https://github.com/DioxusLabs/blitz", rev = "280b1ba" }

# Windowing & Input
winit = { version = "0.30.2", features = ["rwh_06"] }

# IO & Networking
tokio = { version = "1.25.0", features = ["full"] }

# Servo dependencies
markup5ever = "0.14"
html5ever = "0.29"
markup5ever_rcdom = "0.5.0-unofficial"

[features]
nightly = []
tracing = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(leptos_debuginfo)', 'cfg(erase_components)'] }