[package]
name = "leptos_blitz_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
attribute-derive = { version = "0.10.3", features = ["syn-full"] }
cfg-if = "1.0"
html-escape = "0.2.13"
itertools = "0.13.0"
prettyplease = "0.2.25"
proc-macro-error2 = { version = "2.0", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
rstml = "0.12.0"
leptos_hot_reload = { workspace = true }
# server_fn_macro = { workspace = true }
convert_case = "0.6.0"
uuid = { version = "1.11", features = ["v4"] }
tracing = { version = "0.1.41", optional = true }

[features]
csr = []
# hydrate = []
# ssr = ["server_fn_macro/ssr", "leptos/ssr"]
# nightly = ["server_fn_macro/nightly"]
# tracing = ["dep:tracing"]
# islands = []
# trace-component-props = []
# actix = ["server_fn_macro/actix"]
# axum = ["server_fn_macro/axum"]
# generic = ["server_fn_macro/generic"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(leptos_debuginfo)', 'cfg(erase_components)'] }
